@@ -1,0 +1,10 @@
+#include "FBLib_TMSOSDMenu.h"
+
+void OSDMenuInfoBoxExitButton (bool ExitButton)
+{
+  TRACEENTER();
+
+  InfoBoxExitButton = ExitButton;
+
+  TRACEEXIT();
+}
